[tool.poetry]
name = "bsync"
version = "0.1.0"
description = "Tools to autogenerate a Python SDK for BuildingSync given an XSD"
authors = ["Joel Bender <joel@carrickbender.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
