[tool.poetry]
name = "bsync"
version = "0.1.1"
description = "Tools to autogenerate a Python SDK for BuildingSync given an XSD"
authors = ["Joel Bender <joel@carrickbender.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
